--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
+    "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "decimal.js": "^10.4.3",
     "isbot": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stream-browserify": "^3.0.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
