--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
@@ -53,7 +54,7 @@
     "prettier": "^3.2.4",
     "prisma": "^5.19.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.3",
+    "vite": "^5.4.4",
     "vite-plugin-node-polyfills": "^0.22.0"
   },
   "workspaces": [
