--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "@vitejs/plugin-react": "^4.3.1",
-    "buffer": "^6.0.3",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "decimal.js": "^10.4.3",
     "isbot": "^5.1.0",
     "react": "^18.2.0",
@@ -45,6 +43,7 @@
   "devDependencies": {
     "@remix-run/eslint-config": "^2.7.1",
     "@shopify/api-codegen-preset": "^1.0.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^8.40.0",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.31",
