--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "isbot": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stream-browserify": "^3.0.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
@@ -53,8 +54,7 @@
     "prettier": "^3.2.4",
     "prisma": "^5.19.1",
     "typescript": "^5.2.2",
-    "vite": "^5.4.4",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite": "^5.1.3"
   },
   "workspaces": [
     "extensions/*"
