--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "b07d3deef8c6b0b1b0b50aa79aa2350b"
 name = "greenline-app"
 handle = "greenline-app"
-application_url = "https://synthesis-strict-parker-enhance.trycloudflare.com"
+application_url = "https://shopify.greenlineco.site/"
 embedded = true
 
 [build]
@@ -17,9 +17,9 @@ scopes = "customer_read_customers,read_customers,read_discounts,read_draft_order
 
 [auth]
 redirect_urls = [
-  "https://synthesis-strict-parker-enhance.trycloudflare.com/auth/callback",
-  "https://synthesis-strict-parker-enhance.trycloudflare.com/auth/shopify/callback",
-  "https://synthesis-strict-parker-enhance.trycloudflare.com/api/auth/callback"
+  "https://shopify.greenlineco.site//auth/callback",
+  "https://shopify.greenlineco.site/auth/shopify/callback",
+  "https://shopify.greenlineco.site/api/auth/callback"
 ]
 
 [webhooks]
