--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,9 +1,9 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "b07d3deef8c6b0b1b0b50aa79aa2350b"
-name = "greenline-app"
-handle = "greenline-app"
-application_url = "https://shopify.greenlineco.site/"
+name = "Greenline Merchant"
+handle = "greenline-merchnt"
+application_url = "https://actively-negative-hacker-g.trycloudflare.com"
 embedded = true
 
 [build]
@@ -17,9 +17,9 @@ scopes = "customer_read_customers,read_customers,read_discounts,read_draft_order
 
 [auth]
 redirect_urls = [
-  "https://shopify.greenlineco.site//auth/callback",
-  "https://shopify.greenlineco.site/auth/shopify/callback",
-  "https://shopify.greenlineco.site/api/auth/callback"
+  "https://actively-negative-hacker-g.trycloudflare.com/auth/callback",
+  "https://actively-negative-hacker-g.trycloudflare.com/auth/shopify/callback",
+  "https://actively-negative-hacker-g.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
