--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@remix-run/serve": "^2.7.1",
     "@shopify/app-bridge-react": "^4.1.2",
     "@shopify/polaris": "^12.0.0",
+    "@shopify/polaris-icons": "^9.3.0",
     "@shopify/shopify-app-remix": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "@vitejs/plugin-react": "^4.3.1",
