--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -7,22 +7,23 @@ application_url = "https://shop.greenlineco.site"
 embedded = true
 
 [build]
-automatically_update_urls_on_dev = true
+automatically_update_urls_on_dev = false
 dev_store_url = "quickstart-9393e1e2.myshopify.com"
 include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "customer_read_customers,read_customers,read_discounts,read_draft_orders,read_orders,read_payment_terms,read_products,read_returns,write_draft_orders,write_orders,write_products,write_returns"
+scopes = "customer_read_customers,read_assigned_fulfillment_orders,read_customers,read_discounts,read_draft_orders,read_fulfillments,read_merchant_managed_fulfillment_orders,read_orders,read_payment_terms,read_products,read_returns,read_third_party_fulfillment_orders,write_assigned_fulfillment_orders,write_draft_orders,write_fulfillments,write_merchant_managed_fulfillment_orders,write_orders,write_products,write_returns"
 
 [auth]
 redirect_urls = [
   "https://shop.greenlineco.site/auth/callback",
-  "https://shop.greenlineco.site/callback",
+  "https://shop.greenlineco.site/auth/shopify/callback",
+  "https://shop.greenlineco.site/api/auth/callback"
 ]
 
 [webhooks]
-api_version = "2024-07"
+api_version = "2024-10"
 
   [[webhooks.subscriptions]]
   topics = [ "app/uninstalled" ]
