--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,11 +3,11 @@
 client_id = "b07d3deef8c6b0b1b0b50aa79aa2350b"
 name = "Greenline Merchant"
 handle = "greenline-merchant"
-application_url = "https://shop.greenlineco.site"
+application_url = "https://injury-maximize-romance-explain.trycloudflare.com"
 embedded = true
 
 [build]
-automatically_update_urls_on_dev = false
+automatically_update_urls_on_dev = true
 dev_store_url = "quickstart-9393e1e2.myshopify.com"
 include_config_on_deploy = true
 
@@ -17,9 +17,9 @@ scopes = "customer_read_customers,read_assigned_fulfillment_orders,read_customer
 
 [auth]
 redirect_urls = [
-  "https://shop.greenlineco.site/auth/callback",
-  "https://shop.greenlineco.site/auth/shopify/callback",
-  "https://shop.greenlineco.site/api/auth/callback"
+  "https://injury-maximize-romance-explain.trycloudflare.com/auth/callback",
+  "https://injury-maximize-romance-explain.trycloudflare.com/auth/shopify/callback",
+  "https://injury-maximize-romance-explain.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
