- add order view to order card

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "greenline-app",
   "private": true,
   "scripts": {
+    "dv": "shopify app dev --config shopify.app.greenline-merchant-dev.toml",
+    "dv:reset": "shopify app deploy --config shopify.app.greenline-merchant-dev.toml && shopify app dev --config shopify.app.greenline-merchant-dev.toml",
     "build": "remix vite:build",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
-    "deploy": "shopify app deploy",
+    "deploy": "shopify app deploy --config shopify.app.toml",
     "config:use": "shopify app config use",
     "env": "shopify app env",
     "start": "remix-serve ./build/server/index.js",
